# zigbeelens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  package.json  pnpm-lock.yaml
apps/core/: README.md  package.json  pyproject.toml
apps/core/scripts/: generate_oracle_mock_fixtures.py
apps/core/src/zigbeelens/: __init__.py  __main__.py  cli_storage.py  docker_healthcheck.py  logging_config.py  main.py  schemas.py  static.py
apps/core/tests/: conftest.py  legacy_report_shapes.py  report_v3_helpers.py  test_access_log_redaction.py  test_addon_config.py  test_api.py  test_api_auth.py  test_api_token_grammar.py  test_api_v1.py  test_availability_event_groups.py  test_availability_metric_repository.py  test_bearer_auth.py  test_browser_origin.py  test_browser_sessions.py  test_browser_sessions_corrective.py  test_bulk_composition_reads.py  test_config.py  test_contract_seal_corrective.py  test_cors_policy.py  test_dashboard_coverage_warnings.py  test_dashboard_investigation_priorities.py  test_dashboard_model_patterns.py  test_dashboard_shared_availability.py  test_db_concurrency.py  test_decision_coverage.py  test_decision_mqtt.py  test_decision_reasons.py  test_decision_types.py  test_device_coverage.py  test_device_coverage_api.py  test_device_decision_badge.py  test_device_story.py  test_device_story_api.py  test_device_story_report_readiness.py  test_docker_deploy.py  test_docker_healthcheck.py  test_empty_state.py  test_evaluation_pipeline.py  test_events_bounded.py  test_evidence_graph_api_parity.py  (+81 more)
config/: config.yaml  (+1 more)
(+577 files in other folders)
