[project]
name = "zigbeelens-core"
version = "0.1.14"
description = "ZigbeeLens core diagnostic service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pyyaml>=6.0.2",
  "sse-starlette>=2.2.0",
  "paho-mqtt>=2.1.0",
  "itsdangerous>=2.2.0",
  "idna>=3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0",
]

[project.scripts]
zigbeelens = "zigbeelens.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zigbeelens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
